Sidebar menu z-index fix

--- a/resources/assets/sass/src/common.scss
+++ b/resources/assets/sass/src/common.scss
@@ -64,7 +64,7 @@ ul {
 	bottom: 0;
 	left: 0;
 	background: #111;
-	z-index: 10;
+	z-index: 2;
 	transform: translateX(100%);
 	transition: .15s ease all;
 	opacity: 0;
@@ -79,6 +79,12 @@ ul {
 .sidebar.sidebar--toggled {
 	transform: none;
 	opacity: 1;
+}
+
+body.sidebar--toggled {
+	.header--static {
+		position: static;
+	}
 }
 
 .menu {
